--- a/src/main/webapp/resources/css/signin.css
+++ b/src/main/webapp/resources/css/signin.css
@@ -4,6 +4,68 @@ body {
   background-color: #eee;
 }
 
+/*
+ * Header
+ */
+.masthead-brand {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.clearfix{
+  padding-bottom:30px;
+  background-color:#17232A;
+}
+
+.container .jumbotron {
+  background-color: #026D63;
+  color: #fff;
+}
+.masthead-nav > li {
+  display: inline-block;
+}
+.masthead-nav > li + li {
+  margin-left: 20px;
+}
+.masthead-nav > li > a {
+  /*padding-right: ;*/
+  /*padding-left: ;*/
+  font-size: 16px;
+  font-weight: bold;
+  color: #fff; /* IE8 proofing */
+  color: rgba(255,255,255,.75);
+  border-bottom: 2px solid transparent;
+}
+.login {
+  background-color: seagreen;
+  border-color: #018865;
+}
+.masthead-nav > li > a:hover,
+.masthead-nav > li > a:focus {
+  background-color: transparent;
+  border-bottom-color: #a9a9a9;
+  border-bottom-color: rgba(255,255,255,.25);
+}
+.masthead-nav > .active > a,
+.masthead-nav > .active > a:hover,
+.masthead-nav > .active > a:focus {
+  color: #fff;
+  border-bottom-color: ;
+}
+
+@media (min-width: 768px) {
+  .masthead-brand {
+    float: left;
+  }
+  .masthead-nav {
+    float: right;
+  }
+}
+
+/*
+ * FORM
+ */
+
 .form-signin {
   max-width: 330px;
   padding: 15px;
